--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,7 @@
   "rules": {
     "camelcase": "off",
     "import/no-unresolved": "error",
+    "comma-dangle": [ "error", "always-multiline" ],
     "@typescript-eslint/naming-convention": [
       "error",
       {
