--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,7 +23,15 @@
   "rules": {
     "camelcase": "off",
     "import/no-unresolved": "error",
-    "comma-dangle": [ "error", "always-multiline" ],
+    "comma-dangle": [ "error",
+      {
+        "arrays": "always-multiline",
+        "objects": "always-multiline",
+        "imports": "always-multiline",
+        "exports": "always-multiline",
+        "functions": "never"
+      }
+    ],
     "@typescript-eslint/naming-convention": [
       "error",
       {
